# TechShopDjangoProject

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/items/: categories.json  cats.json  items.json
items/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
items/migrations/: 0001_initial.py  0002_alter_categories_options_alter_item_options_and_more.py  0003_alter_item_options.py
items/static/css/: style.css
items/templates/items/: catalog.html  item.html
items/templatetags/: items_tags.py
main/: urls.py  views.py
main/templates/main/: index.html
static/css/: style.css
static/images/: shop_image.avif
techshopapp/: tests.py  urls.py  views.py
techshopapp/templates/techshopapp/: base.html  catalog.html  contacts.html  create_user_form.html  feedback_form.html  feedback_list.html  index.html  item.html  users.html
templates/: base.html
templates/includes/: notifications.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: cart.html  login.html  profile.html  registration.html
