[tool.poetry]
name = "techshop"
version = "0.1.0"
description = ""
authors = ["Anna Gorbunova <81052418+gorbunovaav@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.10"
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
